# sfml_clock

./: CMakeLists.txt  README.md  ciferblat.cpp  ciferblat.hpp  consts.hpp  main.cpp  narrow.cpp  narrow.hpp  rectangle.cpp  rectangle.hpp  sfml_class.cpp  sfml_class.hpp  sfml_engine.cpp  sfml_engine.hpp  table.cpp  table.hpp  thetime.cpp  thetime.hpp
